# article-narrator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: article-sqs-bridge.env  article-sqs-bridge.env.example  prefect.env  prefect.env.example
docker/elasticmq/: elasticmq.conf
docker/prefect/: bootstrap.sh
frontend/: .env.development.example  .env.prod.example  .env.stage.example  app.js  build.sh  config.js.template  index.html  package-lock.json  package.json  style.css
frontend/src/app/: Header.tsx  LocalStorageStateStore.ts  layout.tsx  page.tsx  theme.ts
frontend/src/ui/: LoginView.tsx  SubmitForm.tsx
scripts/: run-prefect-article-to-podcast.sh  run-prefect-hello-tts.sh  run-prefect-url-to-podcast.sh  send-test-job.sh
src/article_audio/: __init__.py  audio.py  bridge.py  cli.py  config.py  extractor.py  models.py  podcast.py  prefect_flows.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_extractor.py  test_models.py
tests/fixtures/: arstechnica.html  mempko.html
