[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "article-audio"
version = "0.1.0"
description = "Local article audio bridge and worker utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "ormsgpack>=1.5.0",
  "prefect>=3.0,<4.0",
  "requests>=2.32.0",
  "trafilatura>=2.0.0",
]

[project.scripts]
article-sqs-bridge = "article_audio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
